Fix projection title not centered

--- a/web/src/projector.css
+++ b/web/src/projector.css
@@ -55,6 +55,9 @@ body {
 }
 
 #eventdata {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   height: 50px;
   overflow: hidden;
   line-height: 1.1;
